# Rabbit-ai

./: .gitignore  README.md  example.py  install_private.ps1  pyproject.toml  rabbit_ai_combined.py  requirements.txt  setup.py
rabbit_ai/: __init__.py  cli.py  config.py  engine.py  evaluation.py  memory.py  reasoning.py  retrieval.py  search.py  types.py
tests/: test_memory.py  test_retrieval.py  test_search_reasoning_engine.py
